// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner actions renders with multiple action buttons and overridden spaceInline on horizontal layout 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  background-color: #128293;
  padding: 20px;
  min-height: 64px;
}

.emotion-0 svg {
  fill: #ffffff;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  box-sizing: border-box;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-right: 12px;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-4 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: 0;
  color: #ffffff;
}

.emotion-4::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-4::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-4 svg {
  fill: #ffffff;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-6 {
    max-width: 100%;
  }
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: #0a68c1;
  border-radius: 8px;
  color: #ffffff;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-8 svg {
  width: 24px;
  height: 24px;
}

.emotion-8 svg {
  fill: #ffffff;
}

.emotion-8:hover:not(:disabled) {
  background-color: #02509b;
}

.emotion-8:active:not(:disabled) {
  background-color: #01396e;
}

.emotion-8:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-8:disabled svg {
  fill: #c0c0c0;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-10 {
    max-width: 100%;
  }
}

.emotion-11 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-11::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-11::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<div
    class="emotion-0"
    data-testid="banner-container"
    role="region"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <p
            class="emotion-4"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </p>
        </div>
      </div>
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <div
            class="emotion-7"
          >
            <button
              class="emotion-8"
              data-testid="button"
              type="button"
            >
              <div
                class="emotion-9"
              >
                <div
                  class="emotion-10"
                >
                  <span
                    class="emotion-11"
                  >
                    CTA Button
                  </span>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          class="emotion-6"
        >
          <div
            class="emotion-7"
          >
            <button
              class="emotion-8"
              data-testid="button"
              type="button"
            >
              <div
                class="emotion-9"
              >
                <div
                  class="emotion-10"
                >
                  <span
                    class="emotion-11"
                  >
                    CTA Button
                  </span>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Banner actions renders with multiple action buttons and overridden spaceInline on vertical layout 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  background-color: #128293;
  padding: 20px;
  min-height: 64px;
}

.emotion-0 svg {
  fill: #ffffff;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  box-sizing: border-box;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin-bottom: 12px;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-4 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: 0;
  color: #ffffff;
}

.emotion-4::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-4::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-4 svg {
  fill: #ffffff;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-6 {
    max-width: 100%;
  }
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: #0a68c1;
  border-radius: 8px;
  color: #ffffff;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-8 svg {
  width: 24px;
  height: 24px;
}

.emotion-8 svg {
  fill: #ffffff;
}

.emotion-8:hover:not(:disabled) {
  background-color: #02509b;
}

.emotion-8:active:not(:disabled) {
  background-color: #01396e;
}

.emotion-8:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-8:disabled svg {
  fill: #c0c0c0;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-10 {
    max-width: 100%;
  }
}

.emotion-11 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-11::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-11::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<div
    class="emotion-0"
    data-testid="banner-container"
    role="region"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <p
            class="emotion-4"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </p>
        </div>
      </div>
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <div
            class="emotion-7"
          >
            <button
              class="emotion-8"
              data-testid="button"
              type="button"
            >
              <div
                class="emotion-9"
              >
                <div
                  class="emotion-10"
                >
                  <span
                    class="emotion-11"
                  >
                    CTA Button
                  </span>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          class="emotion-6"
        >
          <div
            class="emotion-7"
          >
            <button
              class="emotion-8"
              data-testid="button"
              type="button"
            >
              <div
                class="emotion-9"
              >
                <div
                  class="emotion-10"
                >
                  <span
                    class="emotion-11"
                  >
                    CTA Button
                  </span>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Banner actions renders with single action button on horizontal layout 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  background-color: #128293;
  padding: 20px;
  min-height: 64px;
}

.emotion-0 svg {
  fill: #ffffff;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  box-sizing: border-box;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-right: 12px;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-4 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: 0;
  color: #ffffff;
}

.emotion-4::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-4::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-4 svg {
  fill: #ffffff;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: calc(-16px/2);
  margin-right: calc(-16px/2);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(16px/2);
  margin-right: calc(16px/2);
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-6 {
    max-width: 100%;
  }
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: #0a68c1;
  border-radius: 8px;
  color: #ffffff;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-8 svg {
  width: 24px;
  height: 24px;
}

.emotion-8 svg {
  fill: #ffffff;
}

.emotion-8:hover:not(:disabled) {
  background-color: #02509b;
}

.emotion-8:active:not(:disabled) {
  background-color: #01396e;
}

.emotion-8:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-8:disabled svg {
  fill: #c0c0c0;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-10 {
    max-width: 100%;
  }
}

.emotion-11 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-11::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-11::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<div
    class="emotion-0"
    data-testid="banner-container"
    role="region"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <p
            class="emotion-4"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
          eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </p>
        </div>
      </div>
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <div
            class="emotion-7"
          >
            <button
              class="emotion-8"
              data-testid="button"
              type="button"
            >
              <div
                class="emotion-9"
              >
                <div
                  class="emotion-10"
                >
                  <span
                    class="emotion-11"
                  >
                    CTA Button
                  </span>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Banner actions renders with single action button on vertical layout 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  background-color: #128293;
  padding: 20px;
  min-height: 64px;
}

.emotion-0 svg {
  fill: #ffffff;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  box-sizing: border-box;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin-bottom: 12px;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-4 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: 0;
  color: #ffffff;
}

.emotion-4::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-4::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-4 svg {
  fill: #ffffff;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-top: calc(-24px/2);
  margin-bottom: calc(-24px/2);
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(24px/2);
  margin-bottom: calc(24px/2);
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-6 {
    max-width: 100%;
  }
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: #0a68c1;
  border-radius: 8px;
  color: #ffffff;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-8 svg {
  width: 24px;
  height: 24px;
}

.emotion-8 svg {
  fill: #ffffff;
}

.emotion-8:hover:not(:disabled) {
  background-color: #02509b;
}

.emotion-8:active:not(:disabled) {
  background-color: #01396e;
}

.emotion-8:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-8:disabled svg {
  fill: #c0c0c0;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-10 {
    max-width: 100%;
  }
}

.emotion-11 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-11::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-11::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<div
    class="emotion-0"
    data-testid="banner-container"
    role="region"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <p
            class="emotion-4"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
          eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </p>
        </div>
      </div>
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <div
            class="emotion-7"
          >
            <button
              class="emotion-8"
              data-testid="button"
              type="button"
            >
              <div
                class="emotion-9"
              >
                <div
                  class="emotion-10"
                >
                  <span
                    class="emotion-11"
                  >
                    CTA Button
                  </span>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Banner renders with content as react element 1`] = `
<DocumentFragment>
  @media screen {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  box-sizing: border-box;
  background-color: #128293;
  padding: 20px;
  min-height: 64px;
}

.emotion-1 svg {
  fill: #ffffff;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  box-sizing: border-box;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin-bottom: 12px;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-5 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: 0;
  color: #ffffff;
}

.emotion-5::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-5::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-5 svg {
  fill: #ffffff;
}

.emotion-6 {
  margin: 0;
  padding: 1px 0;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      data-testid="banner-container"
      role="region"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <p
                class="emotion-6"
              >
                Banner text
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  @media screen {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: block;
  }
}

.emotion-1 {
  box-sizing: border-box;
  background-color: #128293;
  padding: 20px;
  min-height: 64px;
}

.emotion-1 svg {
  fill: #ffffff;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  box-sizing: border-box;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-right: 12px;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-5 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: 0;
  color: #ffffff;
}

.emotion-5::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-5::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-5 svg {
  fill: #ffffff;
}

.emotion-6 {
  margin: 0;
  padding: 1px 0;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      data-testid="banner-container"
      role="region"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <p
                class="emotion-6"
              >
                Banner text
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Banner renders with content as string and link 1`] = `
<DocumentFragment>
  @media screen {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  box-sizing: border-box;
  background-color: #128293;
  padding: 20px;
  min-height: 64px;
}

.emotion-1 svg {
  fill: #ffffff;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  box-sizing: border-box;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin-bottom: 12px;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-5 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: 0;
  color: #ffffff;
}

.emotion-5::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-5::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-5 svg {
  fill: #ffffff;
}

.emotion-6 {
  display: inline-block;
  transition-property: color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  color: #0a68c1;
}

.emotion-6 svg {
  fill: #0a68c1;
}

.emotion-6:hover:not(:disabled) {
  color: #02509b;
}

.emotion-6:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-6:active:not(:disabled) {
  color: #01396e;
}

.emotion-6:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-6:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-6:visited:not(:disabled) svg {
  fill: #7547a3;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-6 {
    vertical-align: text-bottom;
  }
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-8 {
  margin: 0;
  padding: 1px 0;
  display: inline-block;
  display: block;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      data-testid="banner-container"
      role="region"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <p
              class="emotion-5"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
      eiusmod tempor incididunt
              <a
                class="emotion-6"
                href="/"
              >
                <span
                  class="emotion-7"
                >
                  <span
                    class="emotion-8"
                  >
                    NewsKit Link
                  </span>
                </span>
              </a>
              ut labore et dolore magna aliqua.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  @media screen {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: block;
  }
}

.emotion-1 {
  box-sizing: border-box;
  background-color: #128293;
  padding: 20px;
  min-height: 64px;
}

.emotion-1 svg {
  fill: #ffffff;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  box-sizing: border-box;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-right: 12px;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-5 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: 0;
  color: #ffffff;
}

.emotion-5::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-5::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-5 svg {
  fill: #ffffff;
}

.emotion-6 {
  display: inline-block;
  transition-property: color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  color: #0a68c1;
}

.emotion-6 svg {
  fill: #0a68c1;
}

.emotion-6:hover:not(:disabled) {
  color: #02509b;
}

.emotion-6:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-6:active:not(:disabled) {
  color: #01396e;
}

.emotion-6:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-6:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-6:visited:not(:disabled) svg {
  fill: #7547a3;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-6 {
    vertical-align: text-bottom;
  }
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-8 {
  margin: 0;
  padding: 1px 0;
  display: inline-block;
  display: block;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      data-testid="banner-container"
      role="region"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <p
              class="emotion-5"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
      eiusmod tempor incididunt
              <a
                class="emotion-6"
                href="/"
              >
                <span
                  class="emotion-7"
                >
                  <span
                    class="emotion-8"
                  >
                    NewsKit Link
                  </span>
                </span>
              </a>
              ut labore et dolore magna aliqua.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Banner renders with default props 1`] = `
<DocumentFragment>
  @media screen {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  box-sizing: border-box;
  background-color: #128293;
  padding: 20px;
  min-height: 64px;
}

.emotion-1 svg {
  fill: #ffffff;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  box-sizing: border-box;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin-bottom: 12px;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-5 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: 0;
  color: #ffffff;
}

.emotion-5::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-5::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-5 svg {
  fill: #ffffff;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      data-testid="banner-container"
      role="region"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <p
              class="emotion-5"
            >
              Banner text
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  @media screen {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: block;
  }
}

.emotion-1 {
  box-sizing: border-box;
  background-color: #128293;
  padding: 20px;
  min-height: 64px;
}

.emotion-1 svg {
  fill: #ffffff;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  box-sizing: border-box;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-right: 12px;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-5 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: 0;
  color: #ffffff;
}

.emotion-5::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-5::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-5 svg {
  fill: #ffffff;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      data-testid="banner-container"
      role="region"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <p
              class="emotion-5"
            >
              Banner text
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Banner renders with icon 1`] = `
<DocumentFragment>
  @media screen {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  box-sizing: border-box;
  background-color: #128293;
  padding: 20px;
  min-height: 64px;
}

.emotion-1 svg {
  fill: #ffffff;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  box-sizing: border-box;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin-bottom: 12px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 12px;
}

.emotion-5 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  color: #ffffff;
  fill: #ffffff;
  vertical-align: unset;
  display: inline-block;
}

.emotion-5.emotion-5 {
  width: 24px;
  height: 24px;
  color: #ffffff;
  fill: #ffffff;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-8 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: 0;
  color: #ffffff;
}

.emotion-8::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-8::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-8 svg {
  fill: #ffffff;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      data-testid="banner-container"
      role="region"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <svg
              aria-hidden="true"
              class="emotion-5 emotion-6"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
              />
            </svg>
          </div>
          <div
            class="emotion-7"
          >
            <p
              class="emotion-8"
            >
              Banner text
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  @media screen {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: block;
  }
}

.emotion-1 {
  box-sizing: border-box;
  background-color: #128293;
  padding: 20px;
  min-height: 64px;
}

.emotion-1 svg {
  fill: #ffffff;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  box-sizing: border-box;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-right: 12px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 12px;
}

.emotion-5 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  color: #ffffff;
  fill: #ffffff;
  vertical-align: unset;
  display: inline-block;
}

.emotion-5.emotion-5 {
  width: 24px;
  height: 24px;
  color: #ffffff;
  fill: #ffffff;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-8 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: 0;
  color: #ffffff;
}

.emotion-8::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-8::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-8 svg {
  fill: #ffffff;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      data-testid="banner-container"
      role="region"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <svg
              aria-hidden="true"
              class="emotion-5 emotion-6"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
              />
            </svg>
          </div>
          <div
            class="emotion-7"
          >
            <p
              class="emotion-8"
            >
              Banner text
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
